--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -220,19 +220,19 @@ PAGES OF THE WEBSITE */
   width: 100%;
   min-height: 100%;
   margin-left: -8px;
+  margin-top: -8px;
 }
 
 .top-bar {
-  background-color: #CCC;
+  background-color: rgba(30,30,30,0.1);
   height: 40px;
   min-width: 100%;
   margin-left: -8px;
-  margin-top: -8px;
-  border-bottom: 1px solid #BBB;
   overflow: hidden;
 }
 
 .top-bar p {
+  color: white;
   font-family: Arial;
   margin-left: 10px;
   margin-top: 10px;
